5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1721_3069.log
== SUBMITION (2019-05-02 18:16:23) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == FURIA):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
elif(ataque == GRITO):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
elif(ataque == TOQUE):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.137632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3069/main.py", line 5, in <module>
    if(ataque == FURIA):
NameError: name 'FURIA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:16:24) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == FURIA):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
elif(ataque == GRITO):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
elif(ataque == TOQUE):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(ataque == FURIA):
NameError: name 'FURIA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:16:58) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
elif(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
elif(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.181697
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:16:59) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
elif(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
elif(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.136275
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:16:59) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
elif(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
elif(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:17:32) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.263097
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:17:33) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:17:47) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.221809
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:17:47) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:17:56) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.219978
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:17:57) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:18:46) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:18:54) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.147303
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:18:56) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.145936
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
100
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:18:56) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.177494
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:

-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
13
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:18:56) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA"):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO"):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE"):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)




-- EXECUTION TIME:
0.189258
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:

-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
13
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:28:46) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA" and 2 <= d+d2 <= 16 ):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)
else:
	print("Entrada invalida")




-- EXECUTION TIME:
0.126677
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:28:47) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA" and 2 <= d+d2 <= 16 ):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)
else:
	print("Entrada invalida")




-- EXECUTION TIME:
0.144169
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:28:47) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA" and 2 <= d+d2 <= 16 ):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
if(ataque == "GRITO" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
if(ataque == "TOQUE" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)
else:
	print("Entrada invalida")




-- EXECUTION TIME:
0.179525
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
13
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:29:09) 
-- CODE:
ataque = input("digite o atque: ")
d = int(input("dado lancado: "))
d2 = int(input("dado 2 lancado: "))
ataque = ataque.upper()
if(ataque == "FURIA" and 2 <= d+d2 <= 16 ):
	s_dado = d + d2
	dano = 10 + s_dado
	print(dano)
elif(ataque == "GRITO" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = 6 + s_dado
	print(dano)
elif(ataque == "TOQUE" and 2 <= d+d2 <= 16):
	s_dado = d + d2
	dano = s_dado**2
	print(dano)
else:
	print("Entrada invalida")




-- EXECUTION TIME:
0.218758
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
